# maubot-spotify

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  base-config.yaml  brainstorming.md  flake.nix  maubot.yaml  pyproject.toml  renovate.json5  spotifybot.py
spotifybot/: __init__.py  bot.py  config.py  data.py  spotify.py
